# OctoAgent

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OctoAgent_Blueprint.md  README.md  driver-config.yaml  spec-driver.config.yaml
octoagent/: .env.example  .env.litellm.example  .gitignore  README.md  conftest.py  docker-compose.litellm.yml  litellm-config.yaml  octoagent.yaml  octoagent.yaml.example  pyproject.toml
octoagent/apps/gateway/: pyproject.toml  toolsets.yaml
octoagent/apps/gateway/tests/: conftest.py  runtime_service_fixtures.py  test_agent_session_turn_hook.py  test_approval_override_e2e.py  test_artifact_read_back_tool.py  test_ask_back_recall_planner_resume_f100.py  test_auth_diagnostics_api.py  test_auto_consolidate.py  test_automation_resource_route.py  test_bootstrap_integrity.py  test_bootstrap_orchestrator.py  test_bootstrap_simplification.py  test_butler_behavior.py  test_butler_delegate_graph.py  test_butler_dispatch_redesign.py  test_capability_pack_tools.py  test_capability_pack_web_search.py  test_chat_force_full_recall.py  test_chat_send_route.py  test_config_drift_check.py  test_config_retirement_f151.py  test_consolidation_service.py  test_context_budget.py  test_context_compaction.py  test_control_plane_api.py  test_deferred_tools_e2e.py  test_delegation_mode_writes_f091.py  test_delegation_plane.py  test_delegation_plane_spawn_child.py  test_derived_extraction.py  test_discord_route.py  test_discord_service.py  test_execution_api.py  test_f101_notification.py  test_f101_phase_b.py  test_f102_daily_routine_config.py  test_f102_daily_routine_service.py  test_f102_notification_channels.py  test_f105_channel_adapter.py  test_f105_conversation_binding.py  (+98 more)
octoagent/apps/gateway/tests/builtin_tools/: test_subagents_spawn_delegation.py
octoagent/apps/gateway/tests/cli/: test_attest_commands.py  test_backup_commands.py  (+15 more)
octoagent/behavior/: .onboarding-state.json
octoagent/docs/design/: agent-zero-architecture.md  octoagent-architecture.md  openclaw-architecture.md
octoagent/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
octoagent/frontend/e2e/: approval-center.spec.ts  chat-scripted-loop.spec.ts  front-door-token.spec.ts  selectors.ts  support.ts
octoagent/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
octoagent/frontend/src/api/: approval-center.test.ts  approval-center.ts  client.test.ts  client.ts  memory-candidates-types.ts  memory-candidates.ts
octoagent/frontend/src/components/: FrontDoorGate.test.tsx  FrontDoorGate.tsx  McpInstallWizard.tsx  OperatorInboxPanel.tsx  RecoveryPanel.tsx
octoagent/frontend/src/hooks/: chatStreamHelpers.test.ts  chatStreamHelpers.ts  chatStreamReducer.test.ts  chatStreamReducer.ts  chatStreamTypes.ts  useApprovalCenterCount.test.ts  useApprovalCenterCount.ts  useApprovals.ts  useAutoScroll.ts  useChatStream.test.tsx  useChatStream.ts  useMemoryCandidateCount.ts  useOperatorInbox.ts  useSSE.ts  useTaskLiveState.ts  useWorkbenchSnapshot.ts
octoagent/frontend/src/pages/: AdvancedControlPlane.tsx  AgentCenter.test.tsx  AgentCenter.tsx  ApprovalCenter.tsx  AutomationCenter.test.tsx  AutomationCenter.tsx  ChatWorkbench.test.tsx  ChatWorkbench.tsx  ControlPlane.test.tsx  ControlPlane.tsx  FilesCenter.test.tsx  FilesCenter.tsx  Home.tsx  McpProviderCenter.tsx  MemoryCandidates.tsx  MemoryCenter.tsx  SettingsCenter.tsx  SkillCenter.tsx  SkillProviderCenter.tsx  TaskDetail.test.tsx  TaskDetail.tsx  TaskList.tsx  WorkbenchBoard.test.tsx  WorkbenchBoard.tsx  WorkspaceGitView.test.tsx  WorkspaceGitView.tsx
octoagent/frontend/src/styles/: primitives.css  shell.css  theme-v2.css  tokens.css  workbench-ui.css  workbench-v2.css
octoagent/frontend/src/test/: fakeEventSource.ts
octoagent/frontend/src/testing/: l1SelectorsContract.test.ts
octoagent/frontend/src/types/: index.ts
octoagent/frontend/src/utils/: formatTime.ts  phaseClassifier.test.ts  phaseClassifier.ts  roundSplitter.test.ts  roundSplitter.ts
octoagent/frontend/src/workbench/: freshness.test.ts  freshness.ts  utils.test.ts  utils.ts
octoagent/frontend/testing/: l1SelectorsContract.test.ts
octoagent/scripts/: doctor-octo-home.sh  install-octo-home.sh  install-octo.sh  run-octo-home.sh  test_codex_e2e.py
octoagent/test-results/: junit-backend.xml
octoagent/tests/: AGENTS.md  quarantine.json
octoagent/tests/contract/: test_policy_checkpoint_contract.py
octoagent/tests/fixtures/local-instance/: .env.e2e.template  .gitignore  README.md  octoagent.yaml.template
octoagent/tests/gate/: conftest.py  test_check_attestation.py  test_check_changed_lines_coverage.py  test_check_quarantine.py  test_clean_wheel_contract.py  test_f151_ci_wiring.py  test_lane_orchestrator.py  test_runtime_architecture.py
octoagent/tests/integration/: conftest.py  test_approval_api.py  test_approval_flow.py  test_f002_echo_mode.py  test_f002_fallback.py  test_f002_litellm_mode.py  test_f002_payload_compat.py  test_f007_e2e_integration.py  test_f008_orchestrator_flow.py  test_f009_worker_runtime_flow.py  test_f010_checkpoint_resume.py  test_f013_checkpoint.py  test_f013_e2e_full.py  test_f013_trace.py  test_f013_watchdog.py  test_f023_m2_acceptance.py  test_f031_m3_acceptance.py  test_f033_agent_context_continuity.py  test_f067_session_memory_pipeline.py  test_f093_worker_full_session_e2e.py  test_f151_gateway_startup_fail_closed.py  test_f151_runtime_boundary_flow.py  test_live_skill_tool_calling.py  test_sc1_e2e.py  test_sc2_durability.py  test_sc3_projection.py  test_sc4_artifact.py  test_sc6_cancel.py  test_sc8_llm_echo.py  test_sse_events.py  test_update_workspace_safety.py
octoagent/tests/lib_semantics/: __init__.py  test_apscheduler_cron_dow_semantics.py  test_httpx_anyio_tls_read_semantics.py  test_piper_api_semantics.py
octoagent/tests/unit/policy/: test_approval_manager.py  test_global_rule.py  test_models.py  test_pipeline.py  test_policy_check_hook.py  test_profile_filter.py
octoagent/tests/unit/tooling/: test_path_policy.py
(+2119 files in other folders)
