[project]
name = "octoagent"
version = "0.1.0"
description = "OctoAgent - Personal AI OS (M0 Foundation)"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "keyring>=25.0,<26.0",
    "ruff",
    "aiosqlite>=0.21",
    "octoagent-core",
    "octoagent-provider",
    "octoagent-gateway",
    "octoagent-tooling",
    "octoagent-skills",
    "octoagent-policy",
    "octoagent-memory",
    "octoagent-protocol",
    "octoagent-sdk",
    "pytest-xdist>=3.8.0",
]

[tool.uv.sources]
octoagent-core = { workspace = true }
octoagent-provider = { workspace = true }
octoagent-gateway = { workspace = true }
octoagent-tooling = { workspace = true }
octoagent-skills = { workspace = true }
octoagent-policy = { workspace = true }
octoagent-memory = { workspace = true }
octoagent-protocol = { workspace = true }
octoagent-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/provider",
    "packages/protocol",
    "packages/tooling",
    "packages/skills",
    "packages/policy",
    "packages/memory",
    "packages/sdk",
    "apps/gateway",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008", "B017"]  # B008: FastAPI Depends() 标准模式; B017: 测试中 pytest.raises(Exception)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/tests", "packages/provider/tests", "packages/protocol/tests", "packages/tooling/tests", "packages/skills/tests", "packages/policy/tests", "packages/memory/tests", "apps/gateway/tests", "tests"]
consider_namespace_packages = true
# Feature 083 P3+P4+P5：xdist **不默认启用**。
# - P3+P4 调研：task_runner attach_input 测试在 xdist 高负载下偶发 race
# - P5 修了 ExecutionConsoleService.attach_input 的 read race（_read_task_with_waiting_input_retry）
# - 但仍有第 2 个 race：runner 重启场景（test_attach_input_after_restart_resumes_waiting_task）
#   涉及 startup recovery 与 attach_input 的 timing 交互，治本超 F083 scope
# 结论：默认串行（100% 稳定）；本地开发可 `pytest -n auto packages/<pkg>/tests/`
# 子集获得 5x 提速。详见 docs/codebase-architecture/testing-concurrency.md
