[project]
name = "octoagent"
version = "0.1.0"
description = "OctoAgent - Personal AI OS (M0 Foundation)"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "keyring>=25.0,<26.0",
    "ruff",
    "aiosqlite>=0.21",
    "octoagent-core",
    "octoagent-provider",
    "octoagent-gateway",
    "octoagent-tooling",
    "octoagent-skills",
    "octoagent-policy",
    "octoagent-memory",
    "octoagent-protocol",
    "octoagent-sdk",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=14.0",
    "psutil>=5.9",
]

[tool.uv.sources]
octoagent-core = { workspace = true }
octoagent-provider = { workspace = true }
octoagent-gateway = { workspace = true }
octoagent-tooling = { workspace = true }
octoagent-skills = { workspace = true }
octoagent-policy = { workspace = true }
octoagent-memory = { workspace = true }
octoagent-protocol = { workspace = true }
octoagent-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/provider",
    "packages/protocol",
    "packages/tooling",
    "packages/skills",
    "packages/policy",
    "packages/memory",
    "packages/sdk",
    "apps/gateway",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008", "B017"]  # B008: FastAPI Depends() 标准模式; B017: 测试中 pytest.raises(Exception)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/tests", "packages/provider/tests", "packages/protocol/tests", "packages/tooling/tests", "packages/skills/tests", "packages/policy/tests", "packages/memory/tests", "apps/gateway/tests", "tests"]
consider_namespace_packages = true
markers = [
    "e2e_smoke: F087 smoke 5 域真实 LLM e2e（pre-commit hook 自动跑，≤ 180s）",
    "e2e_full: F087 full 8 域真实 LLM e2e（手动 / octo e2e full，≤ 10min）",
    "e2e_live: F087 e2e_live 套件正交标记（与 e2e_smoke / e2e_full 共存）",
]
# Feature 083 P3+P4+P5+P6：xdist **不默认启用**——长尾 timing race 超 F083 scope。
# - P1+P2：thread shutdown hang 修复 + os.environ 改 monkeypatch（已治本）
# - P5：ExecutionConsoleService.attach_input race #1 治本
#   （_read_task_with_waiting_input_retry，~120ms 容忍读窗口）
# - P6：test_attach_input_after_restart_resumes_waiting_task 改双状态等待
#   （task.status + job.status 都 SUCCEEDED 才停；window 1s → 5s）
# 仍存在的长尾 race（治本超 F083 scope，移交 Feature 084）：
#   - apps/gateway/tests/test_task_runner.py：runner restart + recovery 路径下
#     attach_input 状态读取的次生窗口
#   - tests/integration/test_f009_worker_runtime_flow.py: `await asyncio.sleep(0.4)`
#     单 sleep + assert，xdist 高 CPU 负载下不够稳
#   - 全仓 ~72 处 single-sleep timing assertion 散落各 integration test
# 默认串行（~103s，100% 稳定，2829 测试）；本地开发可 `pytest -n auto packages/<pkg>/tests/`
# 子集获得 5x 提速。详见 docs/codebase-architecture/testing-concurrency.md。
