[project]
name = "octoagent"
version = "0.1.0"
description = "OctoAgent - Personal AI OS (M0 Foundation)"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "keyring>=25.0,<26.0",
    "ruff",
    "aiosqlite>=0.21",
    "octoagent-core",
    "octoagent-provider",
    "octoagent-gateway",
    "octoagent-tooling",
    "octoagent-skills",
    "octoagent-policy",
    "octoagent-memory",
    "octoagent-protocol",
    "octoagent-sdk",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=14.0",
    "psutil>=5.9",
    # F142 件4：payload 断言便利件（pydantic-ai 范式）——整 dict 相等 + 不稳定
    # 字段（id/时间戳）matcher 打洞；样例改造见 test_us4_llm_echo.py /
    # test_control_plane_api.py 标「F142 范式样例」处
    "dirty-equals>=0.9",
]

[tool.uv.sources]
octoagent-core = { workspace = true }
octoagent-provider = { workspace = true }
octoagent-gateway = { workspace = true }
octoagent-tooling = { workspace = true }
octoagent-skills = { workspace = true }
octoagent-policy = { workspace = true }
octoagent-memory = { workspace = true }
octoagent-protocol = { workspace = true }
octoagent-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/provider",
    "packages/protocol",
    "packages/tooling",
    "packages/skills",
    "packages/policy",
    "packages/memory",
    "packages/sdk",
    "apps/gateway",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008", "B017"]  # B008: FastAPI Depends() 标准模式; B017: 测试中 pytest.raises(Exception)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/tests", "packages/provider/tests", "packages/protocol/tests", "packages/tooling/tests", "packages/skills/tests", "packages/policy/tests", "packages/memory/tests", "apps/gateway/tests", "tests"]
consider_namespace_packages = true
markers = [
    "e2e_smoke: F087 smoke 5 域集成层 e2e（不真打 LLM，DI stub 驱动；pre-commit hook 自动跑，≤ 180s。F137 gate 下保持 deny——smoke 漏网真调用必炸）",
    "e2e_full: F087 full 8 域 e2e 套件（octo e2e full，≤ 10min。F137 gate 按此 marker 自动开闸——e2e_full = 声明真 LLM **意图**的信号；真发起调用的**事实**子集另标 real_llm（F141 D9，9 个域文件仅 2 个真打））",
    "e2e_live: F087 e2e_live 套件正交标记（与 e2e_smoke / e2e_full 共存）",
    "e2e_scripted: F138 脚本化决策环确定性 e2e（零真 LLM / 零宿主 OAuth，CI-runnable；F141 已归入 pr lane：pre-commit 跑 'e2e_smoke or e2e_scripted' + CI backend job 专属步）",
    "real_llm: F141 真发起 LLM/外部网络调用的用例（e2e_full 子集，事实标记）。release lane 切分依据：live-real-llm='-m real_llm'（skip 即 FAIL），backend-deterministic='-m \"not real_llm\"'；语义表见 octoagent/tests/AGENTS.md",
]
# Feature 083 P3+P4+P5+P6：xdist **不默认启用**——长尾 timing race 超 F083 scope。
# - P1+P2：thread shutdown hang 修复 + os.environ 改 monkeypatch（已治本）
# - P5：ExecutionConsoleService.attach_input race #1 治本
#   （_read_task_with_waiting_input_retry，~120ms 容忍读窗口）
# - P6：test_attach_input_after_restart_resumes_waiting_task 改双状态等待
#   （task.status + job.status 都 SUCCEEDED 才停；window 1s → 5s）
# 仍存在的长尾 race（治本超 F083 scope，移交 Feature 084）：
#   - apps/gateway/tests/test_task_runner.py：runner restart + recovery 路径下
#     attach_input 状态读取的次生窗口
#   - tests/integration/test_f009_worker_runtime_flow.py: `await asyncio.sleep(0.4)`
#     单 sleep + assert，xdist 高 CPU 负载下不够稳
#   - 全仓 ~72 处 single-sleep timing assertion 散落各 integration test
# 默认串行（~103s，100% 稳定，2829 测试）；本地开发可 `pytest -n auto packages/<pkg>/tests/`
# 子集获得 5x 提速。详见 docs/codebase-architecture/testing-concurrency.md。

# F141 件4：changed-lines coverage 门（CI backend job 裸 `--cov` 走本配置）。
# - source 显式列 src 目录（目录形态避开 namespace 包按模块名解析的不确定性，
#   Codex spec H3）——测试文件天然不在 source 内不计
# - relative_files=true → lcov SF 路径 = 相对 cwd(octoagent/) 的 packages/.../src/...，
#   repo-scripts/check-changed-lines-coverage.py 补 octoagent/ 前缀与 git diff 对齐
[tool.coverage.run]
relative_files = true
source = [
    "packages/core/src",
    "packages/provider/src",
    "packages/protocol/src",
    "packages/tooling/src",
    "packages/skills/src",
    "packages/policy/src",
    "packages/memory/src",
    "packages/sdk/src",
    "apps/gateway/src",
]
