[project]
name = "octoagent-gateway"
version = "0.1.0"
description = "OctoAgent Gateway - FastAPI REST API + SSE"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "sse-starlette>=2.0,<4.0",
    "structlog>=25.1,<26.0",
    "logfire>=3.0",
    "octoagent-core",
    "octoagent-provider",
    "octoagent-policy",
    "apscheduler>=3.10,<4.0",
    # F105 v0.2（FR-C6）：Discord Interactions Ed25519 验签——锁内已有
    # （传递依赖 46.0.5），显式声明防传递链断裂破坏生产验签路径
    "cryptography>=43,<47",
]

[tool.uv.sources]
octoagent-core = { workspace = true }
octoagent-provider = { workspace = true }
octoagent-policy = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octoagent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
octo-bench = "octoagent.gateway.cli.bench_commands:app"
