[project]
name = "octoagent-gateway"
version = "0.1.0"
description = "OctoAgent Gateway - FastAPI REST API + SSE"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "sse-starlette>=2.0,<4.0",
    "structlog>=25.1,<26.0",
    "logfire>=3.0",
    "octoagent-core",
    "octoagent-provider",
    "octoagent-policy",
    "apscheduler>=3.10,<4.0",
    # F105 v0.2（FR-C6）：Discord Interactions Ed25519 验签——锁内已有
    # （传递依赖 46.0.5），显式声明防传递链断裂破坏生产验签路径
    "cryptography>=43,<47",
    # F106 Phase C：plugin 目录热重载 observer。lazy import + 优雅降级——
    # 未装时 watcher 禁用（手动 refresh 仍可，FR-6.4），不阻塞 gateway。
    "watchdog>=4.0,<7.0",
]

[tool.uv.sources]
octoagent-core = { workspace = true }
octoagent-provider = { workspace = true }
octoagent-policy = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octoagent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
# F109 语音 PoC:本地 STT(faster-whisper)。optional——未装时语音优雅降级(#6),
# 不影响 gateway 启动。faster-whisper 传递依赖 PyAV(pip wheel 内置 ffmpeg 库),
# 无需系统 ffmpeg,可直接解码 Telegram OGG/Opus。装:`uv pip install -e '.[voice]'`。
voice = [
    "faster-whisper>=1.0,<2.0",
]

[project.scripts]
octo-bench = "octoagent.gateway.cli.bench_commands:app"
